# bs4-preview

./: README.md  makefile  pyproject.toml  requirements.txt
css_viewer/: main.py
static/css/: style.css
templates/: index.html
