[tool.poetry]
name = "css-viewer"
version = "0.1.0"
description = ""
authors = ["William Ribeiro <williamlimaribeiroo@gmail.com>"]
readme = "README.md"
packages = [{include = "css_viewer"}]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
